# sovereign-agent-lab

./: CHANGELOG.md  README.md  pyproject.toml
docs/: notes-logs-records.md  week1-submission-checklist.md
docs/architecture/: agent-use-cases-uml.md  week1-assignment-snake.md  week5-voice-flow-uml.md
exercise3_rasa/actions/: actions.py
sovereign_agent/agents/: research_agent.py
sovereign_agent/tools/: venue_tools.py
week1/: exercise4_mcp_client.py
week1/answers/: ex1_answers.py  ex2_answers.py  ex3_answers.py  ex4_answers.py
week1/outputs/: ex2_results.json  ex4_results.json
